# Card_bot

./: Cargo.toml
src/: entity.rs  events.rs  main.rs  scene.rs
src/entity/: ability.rs  attack.rs  attributes.rs  dmg_resistance.rs  dmg_type.rs  state.rs
src/entity/ability/: trigger_target.rs
src/events/: event_manager.rs
