[package]
name = "rpv"
version = "0.1.0"
edition = "2021"

[dependencies]
rand="0.8.0"
dotenvy = "0.15.7"
poise="0.5.5"
tokio={ version = "1.30.0", features = ["full"] }

[dependencies.uuid]
version = "1.4.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
